--- a/main.ipynb
+++ b/main.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "# Get the region defined in max_run=rrent configuration (default to us-west-2 if none defined)\n",
     "region=$(aws configure get region)\n",
-    "region=${region:-us-west-2}\n",
+    "region=${region:-us-east-1}\n",
     "\n",
     "fullname=\"${account}.dkr.ecr.${region}.amazonaws.com/${algorithm_name}:${tag}\"\n",
     "\n",
@@ -259,7 +259,7 @@
    "source": [
     "## Process data from S3\n",
     "\n",
-    "You can also access public s3 data by passing in s3 uri into .fit(), make sure you're using the same region as S3."
+    "You can also access public s3 data by passing in s3 uri into .fit(), make sure you're using the same region as S3, and you've access to the S3 objects."
    ]
   },
   {
@@ -282,6 +282,7 @@
     "    image_uri=image_uri,\n",
     "    instance_count=1,\n",
     "    instance_type='ml.m5.xlarge',\n",
+    "    input_mode='FastFile'  # Available options: File | Pipe | FastFile\n",
     "    max_run=2 * 24 * 3600,  # in seconds, max run time allowed.\n",
     "    # keep_alive_period_in_seconds=60*10,  # in second, if you want to reuse these instances,\n",
     "    # enable_remote_debug=True,  # set to True for remote debugging, or enable later\n",
