--- a/main.ipynb
+++ b/main.ipynb
@@ -217,6 +217,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4c50062-8850-4f57-a1a9-af15a70d92c1",
+   "metadata": {},
+   "source": [
+    "环境变量示例：\n",
+    "- SM_RESOURCE_CONFIG={\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m5.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m5.xlarge\"}],\"network_interface_name\":\"eth0\"}\n",
+    "- SM_CURRENT_INSTANCE_GROUP_HOSTS=[\"algo-1\"]  # 完整的机器列表\n",
+    "- SM_CURRENT_HOST=algo-1  # 当前的机器名称，可以根据名称的数字号来判断处理的数据集。\n",
+    "- SM_USER_ARGS=[\"--data_id\",\"ERR036591\"]  # 完整的代码参数，传递给entry_point脚本\n",
+    "- SM_HP_DATA_ID=ERR036591  # 单个的参数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4621c446-1c07-4773-a02b-ba27e4cdb672",
    "metadata": {},
    "source": [
